[package]
name = "memwar"
version = "0.1.3"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["std", "processthreadsapi", "winnt", "minwindef", "errhandlingapi", "winuser", "memoryapi", "tlhelp32", "handleapi"] }
sysinfo = "0.30.12"
derive_more = { version = "1.0.0-beta.6", features = ["display", "error"] }
